Finished the tutorial but only in english.

--- a/res/lang/tutorial/tutorial_english.html
+++ b/res/lang/tutorial/tutorial_english.html
@@ -1,19 +1,45 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
+        <style type="text/css">
             <!--style-->
         </style>
+        <!-- Buttons:{blank:23,color:42,semi:70} -->
     </head>
     <body>
-        <p>
-            Proin eget tortor finibus, posuere neque nec, rhoncus est. <!--blank_button--> Morbi pharetra, ligula nec auctor elementum, purus sem tincidunt arcu, nec laoreet elit odio imperdiet neque.
-        </p>
-        <p>
-            Pellentesque habitant morbi tristique senectus et <!--color_button--> netus et malesuada fames ac turpis egestas. Phasellus laoreet laoreet molestie.
-        </p>
-        <p>
-            In porttitor dictum felis, id ullamcorper purus interdum sed. Praesent auctor velit ut dignissim venenatis. Quisque et elementum enim.
-        </p>
+        <h1>
+            How to play
+        </h1>
+        <ol>
+            <li>
+                Click a&nbsp;<!--blank-->&nbsp;to make it yours&nbsp;<!--color-->
+            </li>
+            <li>
+                Then, click an adjacent&nbsp;<!--semi-->&nbsp;to expand your <b>area</b>.
+            </li>
+            <li>
+                Be the fastest and trap your opponents <b>around</b> your color to seize victory.
+            </li>
+            <li>
+                Have fun ! :^)
+            </li>
+        </ol>
+        <h1>
+            Commands
+        </h1>
+        <ul>
+            <li>
+                When you are joined in, you can use commands to interact with the game
+            </li>
+            <li>
+                Type <i>/list</i> in chat to get the list of commands and <i>/help</i> to get help about one
+            </li>
+            <li>
+                Commands are powerful, you can change the board size, kick another player or consult statistics
+            </li>
+            <li>
+                Some important commands require to be a <i>super user</i>, please do not abuse of theses commands
+            </li>
+        </ul>
     </body>
 </html>
