Added animation to menu with a demo play ! Added dev resources

--- a/res/lang/tutorial/tutorial_english.html
+++ b/res/lang/tutorial/tutorial_english.html
@@ -7,22 +7,24 @@
         <!-- Buttons:{blank:23,color:42,semi:70} -->
     </head>
     <body>
-        <h1>
-            How to play
-        </h1>
-        <ol>
-            <li>
-                Click a&nbsp;<!--blank-->&nbsp;to make it yours&nbsp;<!--color-->
-            </li>
-            <li>
-                Then, click an adjacent&nbsp;<!--semi-->&nbsp;to expand your <b>area</b>.
-            </li>
-            <li>
-                Be the fastest and trap your opponents <b>around</b> your color to seize victory.
-            </li>
-            <li>
-                Have fun ! :^)
-            </li>
-        </ol>
+        <div>
+            <h1>
+                How to play
+            </h1>
+            <ol>
+                <li>
+                    Click a&nbsp;<!--blank-->&nbsp;to make it yours&nbsp;<!--color-->
+                </li>
+                <li>
+                    Then, click an adjacent&nbsp;<!--semi-->&nbsp;to expand your <b>area</b>.
+                </li>
+                <li>
+                    Be the fastest and trap your opponents <b>around</b> your color to seize victory.
+                </li>
+                <li>
+                    Have fun ! :^)
+                </li>
+            </ol>
+        </div>
     </body>
 </html>
