Added buttons to change language and french tutorial !

--- a/res/lang/tutorial/tutorial_english.html
+++ b/res/lang/tutorial/tutorial_english.html
@@ -4,7 +4,7 @@
         <style type="text/css">
             <!--style-->
         </style>
-        <!-- Buttons:{blank:23,color:42,semi:70} -->
+        <!-- Buttons:{blank:23,color:43,semi:71} -->
     </head>
     <body>
         <div>
@@ -13,7 +13,7 @@
             </h1>
             <ol>
                 <li>
-                    Click a&nbsp;<!--blank-->&nbsp;to make it yours&nbsp;<!--color-->
+                    Click a&nbsp;<!--blank-->&nbsp;to make it yours (<!--color-->)
                 </li>
                 <li>
                     Then, click an adjacent&nbsp;<!--semi-->&nbsp;to expand your <b>area</b>.
