Fixed CPU issues with ImagePanel, added hover effect to play button added key option to click buttons in game, edited french tutorial

--- a/res/lang/tutorial/tutorial_french.html
+++ b/res/lang/tutorial/tutorial_french.html
@@ -4,7 +4,7 @@
         <style type="text/css">
             <!--style-->
         </style>
-        <!-- Buttons:{blank:27,color:52,semi:75} -->
+        <!-- Buttons:{blank:39,color:65,semi:106} -->
     </head>
     <body>
         <div>
@@ -13,18 +13,57 @@
             </h1>
             <ol>
                 <li>
-                    Cliquez un&nbsp;<!--blank-->&nbsp;pour le rendre vôtre (<!--color-->)
+                    Cliquez une case vide (<!--blank-->) pour la rendre vôtre (<!--color-->)
                 </li>
                 <li>
-                    Ensuite, cliquz un&nbsp;<!--semi-->&nbsp;adjacent pour étendre votre <b>territoire</b>.
+                    Ensuite, cliquez une case adjacente (<!--semi-->) pour étendre votre <b>territoire</b>.
                 </li>
                 <li>
-                    Soyez le plus rapide et coincez vos opposnts <b>autour</b> de votre couleur pour saisir la victoire !
+                    Si vous tracez le contour d'une forme avec vos cases, elle se remplira automatiquement.
+                </li>
+                <li>
+                    Soyez le plus rapide et coincez vos opposants <b>autour</b> de votre couleur pour saisir la victoire !
                 </li>
                 <li>
                     Amusez-vous bien ! :^)
                 </li>
             </ol>
+
+            <h1>
+                Astuces
+            </h1>
+            <ul>
+                <li>
+                    Tout comme avec les boutons de souris, la barre d'espace et les touches W & E permettent aussi de cliquer sur les cases.
+                </li>
+                <li>
+                    L'auto remplissage des formes ne fonctionne que si tout les joueurs ont placés leur première case.
+                </li>
+                <li>
+                    Ne commencez pas vos parties au centre ! Vous vous ferez entourer de tout les côtés. Il est plus judicieux de commencer à partir d'un côté du tableau et d'aller vers le centre.
+                </li>
+            </ul>
+
+            <h1>
+                Commandes (avancé)
+            </h1>
+            <ul>
+                <li>
+                    Des commandes sont disponibles sur les partie TrapGame. Elles permettent d'exclure un joueur avec un mauvais comportement, changer la taille du tableau ou même d'afficher les statistiques d'un joueur.
+                </li>
+                <li>
+                    Pour afficher la listes des commandes dans le chat de jeu tappez "/list". La liste ne s'affichera que pour vous.
+                </li>
+                <li>
+                    Pour savoir comment fonctionne une commande et à quoi elle sert, tappez "/help commande" en remplaçant le mot "commande" par votre commande.
+                </li>
+                <li>
+                   Pour accéder aux commandes les plus importantes, vous devez d'abord être un super utilisateur. Si vous hébergez votre partie, vous serez le super utilisateur de votre partie.
+                </li>
+                <li>
+                    Si vous êtes super utilisateur, vous pouvez vos pouvoirs aux autres joueurs avec la commande "/superuser joueur" où joueur est le joueur en question.
+                </li>
+            </ul>
         </div>
     </body>
 </html>
