Added host form

--- a/res/lang/tutorial/tutorial_english.html
+++ b/res/lang/tutorial/tutorial_english.html
@@ -19,12 +19,51 @@
                     Then, click an adjacent&nbsp;<!--semi-->&nbsp;to expand your <b>area</b>.
                 </li>
                 <li>
+                    If you draw a shape with your color, it will be filled automatically.
+                </li>
+                <li>
                     Be the fastest and trap your opponents <b>around</b> your color to seize victory.
                 </li>
                 <li>
                     Have fun ! :^)
                 </li>
             </ol>
+
+            <h1>
+                Tips & Strategy
+            </h1>
+            <ul>
+                <li>
+                    As with mouse buttons, Space bar and keys W & E can be used to click on buttons.
+                </li>
+                <li>
+                    Auto-filling only works if all players started playing.
+                </li>
+                <li>
+                   Do not start games in center ! You will be surrounded from all sides. A better strategy is to start from one side and go to the middle.
+                </li>
+            </ul>
+
+            <h1>
+                Commands (advanced)
+            </h1>
+            <ul>
+                <li>
+                    Some commands are available in games. They can kick a player with a bad behavior, change the board size or even show a player's statistics.
+                </li>
+                <li>
+                    To show the list of commands in your game chat, type "/list". The list will be shown only for you.
+                </li>
+                <li>
+                    To find how a command works and what's it's purpose, type "/help command" replacing "command" by your actual command.
+                </li>
+                <li>
+                    To get access to the most important commands, you need to be a super user. If you host a game, you will be the super user of your game.
+                </li>
+                <li>
+                    If you are a super user, you can share your permissions with other players with the command "/superuser player" where player is the player you want to give permissions.
+                </li>
+            </ul>
         </div>
     </body>
 </html>
