--- a/res/lang/tutorial/tutorial_french.html
+++ b/res/lang/tutorial/tutorial_french.html
@@ -40,7 +40,7 @@
                     L'auto remplissage des formes ne fonctionne que si tout les joueurs ont placés leur première case.
                 </li>
                 <li>
-                    Ne commencez pas vos parties au centre ! Vous vous ferez entourer de tout les côtés. Il est plus judicieux de commencer à partir d'un côté du tableau et d'aller vers le centre.
+                    Ne commencez pas vos parties au centre ! Vous serez entouré de tout les côtés. Il est plus judicieux de commencer à partir d'un côté du tableau et d'aller vers le centre.
                 </li>
             </ul>
 
@@ -61,7 +61,7 @@
                    Pour accéder aux commandes les plus importantes, vous devez d'abord être un super utilisateur. Si vous hébergez votre partie, vous serez le super utilisateur de votre partie.
                 </li>
                 <li>
-                    Si vous êtes super utilisateur, vous pouvez vos pouvoirs aux autres joueurs avec la commande "/superuser joueur" où joueur est le joueur en question.
+                    Si vous êtes super utilisateur, vous pouvez partager vos pouvoirs avec d'autres joueurs avec la commande "/superuser joueur" où joueur est le joueur en question.
                 </li>
             </ul>
         </div>
